load-simulator.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: load-simulator
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: load-simulator
    spec:
      serviceAccountName: load-simulator-sa
      tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
      nodeSelector:
        loadBalancer: "true"
      containers:
      - image: ngpitt/load-simulator:v1
        name: load-simulator
        args:
        - -url=http://pi.local/?digits=1000
        - -clients=8
        - -hpa=pi
